TR-61162: hw7 fix data service